--- a/app/src/main/res/layout/second_activity_layout.xml
+++ b/app/src/main/res/layout/second_activity_layout.xml
@@ -20,6 +20,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:layout_collapseParallaxMultiplier="0.75"
                 android:background="@color/red"
                 app:layout_collapseMode="parallax" />
 
